# actix_backend

./: .gitignore  Cargo.toml
migrations/: 20240210143029_init.up.sql
src/: auth.rs  conf.rs  handlers.rs  helpers.rs  jwt.rs  main.rs  models.rs  schema.rs
src/auth/: auth_handlers.rs  auth_schema.rs  jwt.rs  mod.rs
src/entities/: mod.rs  users.rs
src/entities/helpers/: mod.rs
src/migrator/: m20240330_000001_create_patidar_users_table.rs  mod.rs
src/users/: handlers.rs
