[package]
name = "construction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
config = "0.14.0"
dotenvy = "0.15.7"
derive_more = "0.99.17"
deadpool-postgres = { version = "0.12.1", features = ["serde"]}
serde = { version = "1.0.196", features = ["derive"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.10"
