[package]
name = "construction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
argon2 = "0.5.3"
chrono = { version = "0.4.33", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
jsonwebtoken = "9.2.0"
sea-orm = { version = "0.12.15", features = ["sqlx-postgres","runtime-async-std-native-tls","macros"] }
sea-orm-migration = "0.12.15"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tera = "1.19.1"
uuid = { version = "1.7.0", features = ["serde", "v4"]}
